[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/fancy_menus/FancyButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/fancy_menus/FancyMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/screens/main/buttons/graphics_Credits.png" type="Texture" id=3]
[ext_resource path="res://ui/screens/main/buttons/area_HallOfFame.png" type="BitMap" id=4]
[ext_resource path="res://ui/screens/main/buttons/area_Quit.png" type="BitMap" id=5]
[ext_resource path="res://ui/screens/main/buttons/area_Settings.png" type="BitMap" id=6]
[ext_resource path="res://ui/screens/main/buttons/area_Versus.png" type="BitMap" id=8]
[ext_resource path="res://ui/screens/main/buttons/graphics_HallOfFame.png" type="Texture" id=10]
[ext_resource path="res://ui/screens/main/main.svg" type="Texture" id=11]
[ext_resource path="res://ui/screens/main/buttons/graphics_Versus.png" type="Texture" id=12]
[ext_resource path="res://ui/screens/main/buttons/area_Credits.png" type="BitMap" id=13]
[ext_resource path="res://ui/screens/main/buttons/graphics_Quit.png" type="Texture" id=14]
[ext_resource path="res://ui/screens/main/buttons/graphics_Settings.png" type="Texture" id=15]
[ext_resource path="res://ui/Screen.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/screens/main/MainScreen.gd" type="Script" id=17]
[ext_resource path="res://ui/screens/credits/CreditsScreen.tscn" type="PackedScene" id=18]

[node name="MainScreen" instance=ExtResource( 16 )]
script = ExtResource( 17 )
versus_character_selection_scene = null
coop_character_selection_scene = null
hall_of_fame_scene = null
settings_scene = null
credits_scene = ExtResource( 18 )

[node name="Reference" type="TextureRect" parent="." index="0"]
visible = false
modulate = Color( 0.196078, 0.360784, 0.533333, 1 )
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 11 )

[node name="FancyMenu" parent="." index="1" instance=ExtResource( 2 )]
auto_neighbours = "both"

[node name="Versus" parent="FancyMenu" index="0" instance=ExtResource( 1 )]
modulate = Color( 0.984314, 0.858824, 1, 1 )
margin_left = 137.0
margin_top = 102.0
margin_right = 500.0
margin_bottom = 630.0
texture_normal = ExtResource( 12 )
texture_click_mask = ExtResource( 8 )

[node name="Campaign" parent="FancyMenu" index="1" instance=ExtResource( 1 )]
margin_left = 501.0
margin_top = 87.0
margin_right = 780.0
margin_bottom = 590.0

[node name="HallOfFame" parent="FancyMenu" index="2" instance=ExtResource( 1 )]
margin_left = 765.0
margin_top = 95.0
margin_right = 950.0
margin_bottom = 223.0
texture_normal = ExtResource( 10 )
texture_click_mask = ExtResource( 4 )

[node name="Settings" parent="FancyMenu" index="3" instance=ExtResource( 1 )]
margin_left = 822.0
margin_top = 226.0
margin_right = 1030.0
margin_bottom = 357.0
texture_normal = ExtResource( 15 )
texture_click_mask = ExtResource( 6 )

[node name="Credits" parent="FancyMenu" index="4" instance=ExtResource( 1 )]
margin_left = 885.0
margin_top = 363.0
margin_right = 1106.0
margin_bottom = 486.0
texture_normal = ExtResource( 3 )
texture_click_mask = ExtResource( 13 )

[node name="Quit" parent="FancyMenu" index="5" instance=ExtResource( 1 )]
margin_left = 939.0
margin_top = 493.0
margin_right = 1212.0
margin_bottom = 627.0
texture_normal = ExtResource( 14 )
texture_click_mask = ExtResource( 5 )

[connection signal="button_down" from="FancyMenu/Versus" to="." method="_on_Versus_button_down"]
[connection signal="button_down" from="FancyMenu/Campaign" to="." method="_on_CoOp_button_down"]
[connection signal="button_down" from="FancyMenu/HallOfFame" to="." method="_on_HallOfFame_button_down"]
[connection signal="button_down" from="FancyMenu/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="FancyMenu/Credits" to="." method="_on_Credits_button_down"]
[connection signal="button_down" from="FancyMenu/Quit" to="." method="_on_Quit_button_down"]
